refactor: clean code

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -802,9 +802,9 @@
         "registerGoogleAccount": "Sign up with your google account",
         "fillToRegister": "Fill in the fields to register",
         "protectedByReCaptchaPart1": "This site is protected by reCAPTCHA and the Goggle",
-        "protectedByReCaptchaPart2": "Privacy Policy",
+        "protectedByReCaptchaPart2": "privacy policy",
         "protectedByReCaptchaPart3": "and the",
-        "protectedByReCaptchaPart4": "Terms of Service",
+        "protectedByReCaptchaPart4": "terms of service",
         "protectedByReCaptchaPart5": "apply.",
         "registrationBeneficiariesSocialPrograms": "Beneficiaries of social programs cannot register.",
         "day":"Day",
