--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -797,9 +797,9 @@
         "registerGoogleAccount": "Regístrate con tu cuenta de google",
         "fillToRegister": "Rellene los campos para completar su registro",
         "protectedByReCaptchaPart1": "Este sitio está protegido por reCAPTCHA se aplican la",
-        "protectedByReCaptchaPart2": "Política de privacidad",
+        "protectedByReCaptchaPart2": "política de privacidad",
         "protectedByReCaptchaPart3": "y las",
-        "protectedByReCaptchaPart4": "Condiciones del servicio",
+        "protectedByReCaptchaPart4": "condiciones del servicio",
         "protectedByReCaptchaPart5": "de Google.",
         "registrationBeneficiariesSocialPrograms": "Los beneficiarios de programas sociales no pueden registrarse.",
         "day":"Día",
