--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -806,9 +806,9 @@
         "registerGoogleAccount": "Cadastre-se com sua conta do google",
         "fillToRegister": "Preencha os campos para realizar o seu cadastro",
         "protectedByReCaptchaPart1": "Este site é protegido por reCAPTCHA e a",
-        "protectedByReCaptchaPart2": "Política de Privacidade",
+        "protectedByReCaptchaPart2": "política de privacidade",
         "protectedByReCaptchaPart3": "do Google e os",
-        "protectedByReCaptchaPart4": "Termos de Serviço",
+        "protectedByReCaptchaPart4": "termos de serviço",
         "protectedByReCaptchaPart5": "se aplicam.",
         "registrationBeneficiariesSocialPrograms": "Os beneficiários de programas sociais não podem se registrar.",
         "day":"Dia",
