--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -167,7 +167,7 @@
         "deAcordoComOsTermos2": "e nossa",
         "termosDeUso": "termos de uso",
         "cadastrar": "Cadastrar",
-        "cadastroSucedido": "Cadastro realizado com sucesso! Verifique seu email para ativá-lo.",
+        "cadastroSucedido": "Cadastro realizado com sucesso.",
         "informacoesPessoais": "Informações Pessoais",
         "criarLogin": "Criar Login",
         "sucesso": "Sucesso",
