--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -443,9 +443,9 @@
         "identityVerify": "Verify identity",
         "identityVerifyNeeded": "To proceed, it will be necessary to perform identity verification beforehand.",
         "disapprovedIdentity": "Your identity verification has failed. For a manual review, please contact support.",
-        "maximumWithdrawalAmount": "Maximum withdrawal"
-        "disapprovedIdentity": "Your identity verification has failed. For a manual review, please contact support.",
-        "maximumDepositAmount": "Maximum value"
+        "maximumWithdrawalAmount": "Maximum withdrawal",
+        "maximumDepositAmount": "Maximum value",
+        "defaultPaymentMethod": "Default"
     },
     "ativacaoEmail": {
         "ativacaoDeCadastro": "Registration Activation",
