--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -337,6 +337,7 @@
         "tenis": "Tenis",
         "quininha": "Quininha",
         "seninha": "Seninha",
+        "lobby": "Lobby",
         "todos": "Todos",
         "slot": "Tragamonedas",
         "crash": "Crash",
@@ -346,7 +347,8 @@
         "cassinoAoVivo": "Casino en vivo",
         "loteriaPopular": "Lotería popular",
         "maisPopulares": "Populares",
-        "news": "Noticias"
+        "news": "Noticias",
+        "recommendedToYou" : "Recomendado para ti"
     },
     "bilhete": {
         "titulo": "BOLETO",
@@ -386,7 +388,9 @@
         "virtuais": "Virtuales",
         "aoVivo": "Casino en vivo",
         "bingo": "Bingo",
-        "news": "Noticias"
+        "news": "Noticias",
+        "jogosRelacionados": "Juegos relacionados",
+        "recommendedToYou" : "Recomendado para ti"
     },
     "cartoes": {
         "titulo": "Tarjetas",
