--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -342,6 +342,7 @@
         "tenis": "Tênis",
         "quininha": "Quininha",
         "seninha": "Seninha",
+        "lobby": "Lobby",
         "todos": "Todos",
         "slot": "Slot",
         "crash": "Crash",
@@ -351,7 +352,8 @@
         "cassinoAoVivo": "Cassino Ao Vivo",
         "loteriaPopular": "Loteria Popular",
         "maisPopulares": "Populares",
-        "news": "Novidades"
+        "news": "Novidades",
+        "recommendedToYou": "Recomendados para você"
     },
     "bilhete": {
         "titulo": "BILHETE",
@@ -393,7 +395,8 @@
         "aoVivo": "Ao Vivo",
         "bingo": "Bingo",
         "news": "Novidades",
-        "jogosRelacionados": "Jogos relacionados"
+        "jogosRelacionados": "Jogos relacionados",
+        "recommendedToYou": "Recomendados para você"
     },
     "cartoes": {
         "titulo": "Cartões",
