--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -287,7 +287,7 @@
         "passwordRequirements": "Requisitos para una contraseña segura:",
         "passwordLevel": "Nivel de la contraseña:",
         "weak": "Debil",
-        "medium": "Medio",  
+        "medium": "Medio",
         "strong": "Fuerte",
         "kindLogin": "Iniciar sesión con",
         "errorMinorAge": "menor de edad."
@@ -450,6 +450,7 @@
         "availableBalanceForWithdrawal": "Saldo disponible para retiro",
         "safeWithdrawalAlert": "Por razones de seguridad, los retiros solo se realizarán en cuentas pertenecientes al CPF registrado.",
         "enterPixKey": "Seleccione el tipo de clave PIX",
+        "selectBankAccount": "Seleccione la cuenta bancaria",
         "minimumWithdrawal": "Retiro mínimo",
         "dailyMaximum": "Máximo diario",
         "monthlyMaximum": "Máximo mensual",
