feat: adding screen to connect to betting shop

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -290,7 +290,13 @@
         "medium": "Medium",
         "strong": "Strong",
         "kindLogin": "Login with",
-        "errorMinorAge": "underage."
+        "errorMinorAge": "underage.",
+        "bettingShop": "Connect to the point of sale",
+        "enterTheBettingShopCodeAndId": "Enter the code and ID of the point of sale to connect",
+        "connectToBettingShop":  "Connecting to the point of sale",
+        "bettingShopId": "ID",
+        "bettingShopCode": "code",
+        "bettingShopSwitch": "You are already connected to a point of sale. Would you like to continue or connect to a new one?"
     },
     "bankAccounts": {
         "title" : "Cuentas bancarias",
