--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -295,7 +295,13 @@
         "medium": "Médio",
         "strong": "Forte",
         "kindLogin": "Tipo de login",
-        "errorMinorAge": "Menor de idade."
+        "errorMinorAge": "Menor de idade.",
+        "bettingShop": "Ponto de Venda",
+        "enterTheBettingShopCodeAndId": "Digite o código e o ID do ponto de venda para conectar",
+        "connectToBettingShop": "Conectar ao ponto de venda",
+        "bettingShopId": "ID",
+        "bettingShopCode": "Código",
+        "bettingShopSwitch": "Você já está conectado a um ponto de venda. Deseja continuar ou se conectar a um novo?"
     },
     "bankAccounts": {
         "title" : "Contas Bancárias",
