--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -292,11 +292,13 @@
         "kindLogin": "Iniciar sesión con",
         "errorMinorAge": "menor de edad.",
         "bettingShop": "Conectar con el punto de venta",
-        "enterTheBettingShopCodeAndId": "Introduzca el código y el identificador del punto de venta a conectar",
+        "enterTheBettingShopCodeAndId": "Introduzca el código del punto de venta a conectar",
         "connectToBettingShop": "Conectar con el punto de venta",
         "bettingShopId": "ID",
         "bettingShopCode": "Código",
-        "bettingShopSwitch": "Ya estás conectado a un punto de venta. ¿Deseas continuar o conectarte a uno nuevo?"
+        "bettingShopSwitch": "Ya estás conectado a un punto de venta. ¿Deseas continuar o conectarte a uno nuevo?",
+        "disconnect": "Desconectar",
+        "continue": "Continuar"
     },
     "bankAccounts": {
         "title" : "Bank Accounts",
