--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -306,7 +306,8 @@
         "continue": "Continuar",
         "updateInformationPersonalData": "Atualize e gerencie suas informações, como nome, e-mail e telefone, para garantir uma experiência personalizada e segura no sistema.",
         "change_email": "Alterar e-mail",
-        "change_phone": "Alterar telefone"
+        "change_phone": "Alterar telefone",
+        "logout_account": "Sair da conta"
     },
     "bankAccounts": {
         "title" : "Contas Bancárias",
